Switch to Preact

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Animator</title>
+  <title>Wrathskeller Prototype</title>
 </head>
 
 <body>
-  <script type="module" src="/src/main.ts"></script>
-  <a id="download" href="#">Download Body Parts Zip</a>
+  <div id="app"></div>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
